--- a/BSMM2/BSMM2/Resource/AppResources.ja.resx
+++ b/BSMM2/BSMM2/Resource/AppResources.ja.resx
@@ -117,25 +117,178 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ButtonRemove" xml:space="preserve">
-    <value>Remove</value>
+  <data name="ButtonAdd" xml:space="preserve">
+    <value>追加</value>
   </data>
-  <data name="ButtonSelect" xml:space="preserve">
-    <value>Select</value>
+  <data name="ButtonCreate" xml:space="preserve">
+    <value>作成</value>
   </data>
-  <data name="RoundPageTitle" xml:space="preserve">
-    <value>Round</value>
+  <data name="ButtonDone" xml:space="preserve">
+    <value>決定</value>
   </data>
-  <data name="TabTitlePlayer" xml:space="preserve">
-    <value>Player</value>
+  <data name="ButtonNextRound" xml:space="preserve">
+    <value>次のラウンド</value>
   </data>
-  <data name="TabTitleRound" xml:space="preserve">
-    <value>Round</value>
+  <data name="ButtonShuffle" xml:space="preserve">
+    <value>再抽選</value>
   </data>
-  <data name="TextAsCurrentGame" xml:space="preserve">
+  <data name="ButtonStart" xml:space="preserve">
+    <value>スタート</value>
+  </data>
+  <data name="ItemPlayerModeEntrySheet" xml:space="preserve">
+    <value>エントリーシート</value>
+  </data>
+  <data name="ItemPlayerModeNumber" xml:space="preserve">
+    <value>プレーヤー人数</value>
+  </data>
+  <data name="ItemResultDraw" xml:space="preserve">
+    <value>引分け</value>
+  </data>
+  <data name="ItemResultLose" xml:space="preserve">
+    <value>負け</value>
+  </data>
+  <data name="ItemResultProgress" xml:space="preserve">
+    <value>未定</value>
+  </data>
+  <data name="ItemResultWin" xml:space="preserve">
+    <value>勝ち</value>
+  </data>
+  <data name="ItemRuleSingleMatch" xml:space="preserve">
+    <value>一本取り</value>
+  </data>
+  <data name="ItemRuleThreeOnThreeMatch" xml:space="preserve">
+    <value>3 on 3</value>
+  </data>
+  <data name="ItemRuleThreePointMatch" xml:space="preserve">
+    <value>二本取り</value>
+  </data>
+  <data name="LabelAppTitle" xml:space="preserve">
+    <value>BS Match Maker 2</value>
+  </data>
+  <data name="LabelAutoSave" xml:space="preserve">
+    <value>自動保存</value>
+  </data>
+  <data name="LabelCulture" xml:space="preserve">
+    <value>言語設定</value>
+  </data>
+  <data name="LabelDrop" xml:space="preserve">
+    <value>棄権する</value>
+  </data>
+  <data name="LabelMailAddress" xml:space="preserve">
+    <value>メールアドレス</value>
+  </data>
+  <data name="LabelMatchLog" xml:space="preserve">
+    <value>履歴</value>
+  </data>
+  <data name="LabelMinimumCondition" xml:space="preserve">
+    <value>マッチポイントだけで比較</value>
+  </data>
+  <data name="LabelNewGameAsCurrentGame" xml:space="preserve">
     <value>現在のゲームに上書き</value>
   </data>
-  <data name="TextEnableLifePoint" xml:space="preserve">
+  <data name="LabelNewGameEnableLifePoint" xml:space="preserve">
     <value>ライフポイントを有効にする</value>
+  </data>
+  <data name="LabelNewGameEntrySheet" xml:space="preserve">
+    <value>エントリーシート</value>
+  </data>
+  <data name="LabelNewGameNumberOfPlayer" xml:space="preserve">
+    <value>プレーヤー人数</value>
+  </data>
+  <data name="LabelNewGamePlayerEntryMode" xml:space="preserve">
+    <value>プレイヤー登録方法</value>
+  </data>
+  <data name="LabelNewGamePlayerPrefix" xml:space="preserve">
+    <value>プレーヤー名プレフィックス</value>
+  </data>
+  <data name="LabelNewGameRule" xml:space="preserve">
+    <value>試合形式</value>
+  </data>
+  <data name="LabelNewGameTitle" xml:space="preserve">
+    <value>タイトル</value>
+  </data>
+  <data name="LabelRuleAcceptByeMatchDuplication" xml:space="preserve">
+    <value>不戦勝の重複を認める</value>
+  </data>
+  <data name="LabelRuleAcceptGapMatchDuplication" xml:space="preserve">
+    <value>階段戦の重複を認める</value>
+  </data>
+  <data name="MenuAddPlayer" xml:space="preserve">
+    <value>プレーヤー追加</value>
+  </data>
+  <data name="MenuBack" xml:space="preserve">
+    <value>戻る</value>
+  </data>
+  <data name="MenuClear" xml:space="preserve">
+    <value>クリア</value>
+  </data>
+  <data name="MenuDeleteGame" xml:space="preserve">
+    <value>ゲーム削除</value>
+  </data>
+  <data name="MenuExport" xml:space="preserve">
+    <value>エクスポート</value>
+  </data>
+  <data name="MenuHelp" xml:space="preserve">
+    <value>ヘルプ</value>
+  </data>
+  <data name="MenuImport" xml:space="preserve">
+    <value>インポート</value>
+  </data>
+  <data name="MenuJson" xml:space="preserve">
+    <value>Json</value>
+  </data>
+  <data name="MenuNewGame" xml:space="preserve">
+    <value>新しいゲーム</value>
+  </data>
+  <data name="MenuRoundLog" xml:space="preserve">
+    <value>対戦履歴</value>
+  </data>
+  <data name="MenuSave" xml:space="preserve">
+    <value>保存</value>
+  </data>
+  <data name="MenuSelectGame" xml:space="preserve">
+    <value>ゲーム選択</value>
+  </data>
+  <data name="MenuSendMail" xml:space="preserve">
+    <value>メール送信</value>
+  </data>
+  <data name="MenuSetting" xml:space="preserve">
+    <value>設定</value>
+  </data>
+  <data name="MenuSettingRule" xml:space="preserve">
+    <value>ルール設定</value>
+  </data>
+  <data name="PrefixGame" xml:space="preserve">
+    <value>Game</value>
+  </data>
+  <data name="PrefixRound" xml:space="preserve">
+    <value>ラウンド</value>
+  </data>
+  <data name="TabPlayer" xml:space="preserve">
+    <value>プレーヤー</value>
+  </data>
+  <data name="TabRound" xml:space="preserve">
+    <value>ラウンド</value>
+  </data>
+  <data name="TextLifePoint" xml:space="preserve">
+    <value>ライフP</value>
+  </data>
+  <data name="TextMatchPoint" xml:space="preserve">
+    <value>マッチP</value>
+  </data>
+  <data name="TextOpponent" xml:space="preserve">
+    <value>対戦者</value>
+  </data>
+  <data name="TextPlayer" xml:space="preserve">
+    <value>プレーヤー</value>
+  </data>
+  <data name="TextPlayerName" xml:space="preserve">
+    <value>プレーヤー名</value>
+  </data>
+  <data name="TextResult" xml:space="preserve">
+    <value>勝敗</value>
+  </data>
+  <data name="TextWinPoint" xml:space="preserve">
+    <value>勝利P</value>
   </data>
 </root>
