--- a/BSMM2/BSMM2/Resource/AppResources.resx
+++ b/BSMM2/BSMM2/Resource/AppResources.resx
@@ -135,6 +135,9 @@
   <data name="ButtonStart" xml:space="preserve">
     <value>Start</value>
   </data>
+  <data name="DescriptionEntrySheet" xml:space="preserve">
+    <value>List up player names.</value>
+  </data>
   <data name="DescriptionSingleMatch" xml:space="preserve">
     <value>Single match rule</value>
   </data>
