--- a/BSMM2/BSMM2/Resource/AppResources.resx
+++ b/BSMM2/BSMM2/Resource/AppResources.resx
@@ -174,6 +174,15 @@
   <data name="ItemRuleThreeOnThreeMatch" xml:space="preserve">
     <value>3 on 3</value>
   </data>
+  <data name="Label1stMatch" xml:space="preserve">
+    <value>1st Match</value>
+  </data>
+  <data name="Label2ndMatch" xml:space="preserve">
+    <value>2nd Match</value>
+  </data>
+  <data name="Label3rdMatch" xml:space="preserve">
+    <value>3rd Match</value>
+  </data>
   <data name="LabelAppTitle" xml:space="preserve">
     <value>BS Match Maker 2</value>
   </data>
