--- a/BSMM2/BSMM2/Resource/AppResources.resx
+++ b/BSMM2/BSMM2/Resource/AppResources.resx
@@ -231,6 +231,15 @@
   <data name="LabelNewGameTitle" xml:space="preserve">
     <value>Title</value>
   </data>
+  <data name="LabelPointCompare" xml:space="preserve">
+    <value>Point Compare - Mandatory</value>
+  </data>
+  <data name="LabelPostCompare" xml:space="preserve">
+    <value>Post Compare - Mandatory</value>
+  </data>
+  <data name="LabelPreCompare" xml:space="preserve">
+    <value>Pre Compare - Mandatory</value>
+  </data>
   <data name="LabelRuleAcceptByeMatchDuplication" xml:space="preserve">
     <value>Accept bye match duplication</value>
   </data>
