--- a/BSMM2/BSMM2/Resource/AppResources.ja.resx
+++ b/BSMM2/BSMM2/Resource/AppResources.ja.resx
@@ -336,6 +336,12 @@
   <data name="TextBYE" xml:space="preserve">
     <value>不戦勝</value>
   </data>
+  <data name="TextByeMatchCount" xml:space="preserve">
+    <value>不戦勝回数</value>
+  </data>
+  <data name="TextDropped" xml:space="preserve">
+    <value>棄権</value>
+  </data>
   <data name="TextFailToMakeMatch" xml:space="preserve">
     <value>抽選に失敗しました。制約を変更して再抽選できます。</value>
   </data>
@@ -353,6 +359,15 @@
   </data>
   <data name="TextOpponent" xml:space="preserve">
     <value>対戦者</value>
+  </data>
+  <data name="TextOpponentLifePoint" xml:space="preserve">
+    <value>OPライフP</value>
+  </data>
+  <data name="TextOpponentMatchPoint" xml:space="preserve">
+    <value>OPマッチP</value>
+  </data>
+  <data name="TextOpponentWinPoint" xml:space="preserve">
+    <value>OP勝利P</value>
   </data>
   <data name="TextPlayer" xml:space="preserve">
     <value>プレーヤー</value>
